--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "dev": "next dev",
     "build": "tsx migrate.ts && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-deps": "pnpm update --interactive --latest"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.60",
+    "@ai-sdk/openai": "^0.0.62",
     "@langchain/textsplitters": "^0.0.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.0",
     "@vercel/kv": "^2.0.0",
-    "ai": "3.3.41",
+    "ai": "3.4.2",
     "bcrypt-ts": "^5.0.2",
     "classnames": "^2.5.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
-    "framer-motion": "^11.3.19",
+    "framer-motion": "^11.5.6",
     "next": "15.0.0-canary.152",
     "next-auth": "5.0.0-beta.21",
     "pdf-parse": "^1.1.1",
@@ -40,14 +41,14 @@
     "@types/d3-scale": "^4.0.8",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.4",
-    "@types/react": "^18",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "tsx": "^4.15.7"
+    "eslint-config-next": "14.2.13",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "tsx": "^4.15.7",
+    "typescript": "^5"
   }
 }
