--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "tsx migrate.ts && next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --ignore-unknown --write .",
+    "ts": "pnpm tsc --noEmit",
     "update-deps": "pnpm update --interactive --latest"
   },
   "dependencies": {
@@ -47,6 +49,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8.4.47",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.15.7",
     "typescript": "^5"
