--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint",
     "format": "prettier --ignore-unknown --write .",
     "ts": "pnpm tsc --noEmit",
+    "db:generate": "dotenv -- drizzle-kit generate",
+    "db:migrate": "dotenv -- drizzle-kit migrate",
+    "db:push": "dotenv -- drizzle-kit push",
+    "db:studio": "dotenv -- drizzle-kit studio",
     "update-deps": "pnpm update --interactive --latest"
   },
   "dependencies": {
@@ -45,6 +49,7 @@
     "@types/pdf-parse": "1.1.4",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18",
+    "dotenv-cli": "7.4.2",
     "drizzle-kit": "0.24.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.13",
