--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint",
     "format": "prettier --ignore-unknown --write .",
     "ts": "pnpm tsc --noEmit",
-    "db:generate": "dotenv -- drizzle-kit generate",
-    "db:migrate": "dotenv -- drizzle-kit migrate",
-    "db:push": "dotenv -- drizzle-kit push",
-    "db:studio": "dotenv -- drizzle-kit studio",
+    "db:generate": "dotenv -c -- drizzle-kit generate",
+    "db:migrate": "dotenv -c -- drizzle-kit migrate",
+    "db:push": "dotenv -c -- drizzle-kit push",
+    "db:studio": "dotenv -c -- drizzle-kit studio",
     "update-deps": "pnpm update --interactive --latest"
   },
   "dependencies": {
@@ -23,7 +23,6 @@
     "ai": "3.4.7",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
-    "dotenv": "16.4.5",
     "drizzle-orm": "0.33.0",
     "framer-motion": "11.9.0",
     "next": "15.0.0-canary.152",
