--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@langchain/textsplitters": "0.1.0",
     "@vercel/analytics": "1.3.1",
     "@vercel/blob": "0.24.0",
+    "@vercel/postgres": "0.10.0",
     "ai": "3.4.7",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
