--- a/package.json
+++ b/package.json
@@ -4,50 +4,56 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsx migrate.ts && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --ignore-unknown --write .",
+    "ts": "pnpm tsc --noEmit",
+    "db:generate": "dotenv -c -- drizzle-kit generate",
+    "db:migrate": "dotenv -c -- drizzle-kit migrate",
+    "db:push": "dotenv -c -- drizzle-kit push",
+    "db:studio": "dotenv -c -- drizzle-kit studio",
+    "update-deps": "pnpm update --interactive --latest"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.60",
-    "@langchain/textsplitters": "^0.0.3",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/blob": "^0.24.0",
-    "@vercel/kv": "^2.0.0",
-    "ai": "3.3.41",
-    "bcrypt-ts": "^5.0.2",
-    "classnames": "^2.5.1",
-    "d3-scale": "^4.0.2",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0",
-    "framer-motion": "^11.3.19",
+    "@ai-sdk/openai": "0.0.63",
+    "@langchain/textsplitters": "0.1.0",
+    "@vercel/analytics": "1.3.1",
+    "@vercel/blob": "0.24.0",
+    "@vercel/postgres": "0.10.0",
+    "ai": "3.4.7",
+    "bcrypt-ts": "5.0.2",
+    "classnames": "2.5.1",
+    "drizzle-orm": "0.33.0",
+    "framer-motion": "11.9.0",
     "next": "15.0.0-canary.152",
-    "next-auth": "5.0.0-beta.21",
-    "pdf-parse": "^1.1.1",
-    "postgres": "^3.4.4",
+    "next-auth": "5.0.0-beta.22",
+    "pdf-parse": "1.1.1",
+    "postgres": "3.4.4",
     "react": "19.0.0-rc-7771d3a7-20240827",
     "react-dom": "19.0.0-rc-7771d3a7-20240827",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
-    "sonner": "^1.5.0",
-    "swr": "^2.2.5",
-    "use-local-storage": "^3.0.0",
-    "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "react-markdown": "9.0.1",
+    "remark-gfm": "4.0.0",
+    "sonner": "1.5.0",
+    "swr": "2.2.5",
+    "usehooks-ts": "3.1.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/d3-scale": "^4.0.8",
     "@types/node": "^20",
-    "@types/pdf-parse": "^1.1.4",
-    "@types/react": "^18",
+    "@types/pdf-parse": "1.1.4",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.24.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "tsx": "^4.15.7"
+    "dotenv-cli": "7.4.2",
+    "drizzle-kit": "0.24.2",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.13",
+    "eslint-config-prettier": "9.1.0",
+    "postcss": "8.4.47",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.8",
+    "tailwindcss": "3.4.13",
+    "tsx": "4.19.1",
+    "typescript": "5.5.4"
   }
 }
