--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "0.0.63",
+    "@ai-sdk/provider": "0.0.24",
     "@langchain/textsplitters": "0.1.0",
     "@vercel/analytics": "1.3.1",
     "@vercel/blob": "0.24.0",
