--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "update-deps": "pnpm update --interactive --latest"
   },
   "dependencies": {
-    "@ai-sdk/openai": "0.0.63",
+    "@ai-sdk/openai": "0.0.65",
     "@ai-sdk/provider": "0.0.24",
     "@langchain/textsplitters": "0.1.0",
     "@vercel/analytics": "1.3.1",
-    "@vercel/blob": "0.24.0",
+    "@vercel/blob": "0.24.1",
     "@vercel/postgres": "0.10.0",
-    "ai": "3.4.7",
+    "ai": "3.4.8",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
     "drizzle-orm": "0.33.0",
     "framer-motion": "12.0.0-alpha.1",
-    "next": "15.0.0-canary.174",
+    "next": "15.0.0-canary.177",
     "next-auth": "5.0.0-beta.22",
     "pdf-parse": "1.1.1",
     "postgres": "3.4.4",
@@ -48,14 +48,14 @@
     "dotenv-cli": "7.4.2",
     "drizzle-kit": "0.24.2",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "15.0.0-canary.177",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.47",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "3.4.13",
     "tsx": "4.19.1",
-    "typescript": "5.5.4"
+    "typescript": "5.6.2"
   },
   "pnpm": {
     "overrides": {
