--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ai": "3.4.9",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
-    "drizzle-orm": "0.33.0",
+    "drizzle-orm": "0.34.0",
     "framer-motion": "12.0.0-alpha.1",
     "next": "15.0.0-canary.179",
     "next-auth": "5.0.0-beta.22",
@@ -46,7 +46,7 @@
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "dotenv-cli": "7.4.2",
-    "drizzle-kit": "0.24.2",
+    "drizzle-kit": "0.25.0",
     "eslint": "8.57.0",
     "eslint-config-next": "15.0.0-canary.177",
     "eslint-config-prettier": "9.1.0",
@@ -57,7 +57,7 @@
     "tsx": "4.19.1",
     "typescript": "5.6.2"
   },
-  "packageManager": "pnpm@^9.12.0",
+  "packageManager": "pnpm@9.12.0",
   "pnpm": {
     "overrides": {
       "@types/react": "npm:types-react@rc",
