Use a custom database connection

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,9 @@ AUTH_SECRET=****
 # Instructions to create kv database here: https://vercel.com/docs/storage/vercel-blob
 BLOB_READ_WRITE_TOKEN=****
 
-# Instructions to create a database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL=****
+# Instructions to create a database to vercel postgres or neon (limited read/write)
+DATABASE_URL=****
+DATABASE_URL_NON_POOLING=****
+
+# dev database credential owner role
+DATABASE_URL_DEV=****
