Add id and createdAt to User schema

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sonner": "1.5.0",
     "swr": "2.2.6-beta.4",
     "usehooks-ts": "3.1.0",
+    "uuid": "11.0.0-0",
     "zod": "3.23.8"
   },
   "devDependencies": {
