--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint",
     "format": "prettier --ignore-unknown --write .",
     "ts": "pnpm tsc --noEmit",
-    "db:generate": "dotenv -c -- drizzle-kit generate",
-    "db:migrate": "dotenv -c -- drizzle-kit migrate",
-    "db:push": "dotenv -c -- drizzle-kit push",
-    "db:studio": "dotenv -c -- drizzle-kit studio",
+    "db:generate": "dotenv -c -- drizzle-kit generate --config=drizzle-dev.config.ts",
+    "db:migrate": "dotenv -c -- drizzle-kit migrate  --config=drizzle.config.ts",
+    "db:push": "dotenv -c -- drizzle-kit push --config=drizzle-dev.config.ts",
+    "db:studio": "dotenv -c -- drizzle-kit studio --config=drizzle-dev.config.ts",
     "update-deps": "pnpm update --interactive --latest"
   },
   "dependencies": {
@@ -38,6 +38,7 @@
     "sonner": "1.5.0",
     "swr": "2.2.6-beta.4",
     "usehooks-ts": "3.1.0",
+    "uuid": "11.0.0-0",
     "zod": "3.23.8"
   },
   "devDependencies": {
