--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-config-next": "15.0.0-canary.177",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.47",
+    "postcss-load-config": "^6.0.1",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "3.4.13",
