--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@ai-sdk/openai": "0.0.66",
     "@ai-sdk/provider": "0.0.24",
     "@langchain/textsplitters": "0.1.0",
-    "@vercel/analytics": "1.3.1",
     "@vercel/blob": "0.25.0",
     "@vercel/postgres": "0.10.0",
     "ai": "3.4.9",
@@ -27,12 +26,12 @@
     "classnames": "2.5.1",
     "drizzle-orm": "0.34.1",
     "framer-motion": "12.0.0-alpha.1",
-    "next": "15.0.0-canary.181",
+    "next": "15.0.0-canary.186",
     "next-auth": "5.0.0-beta.22",
     "pdf-parse": "1.1.1",
     "postgres": "3.4.4",
-    "react": "19.0.0-rc-2d16326d-20240930",
-    "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "react": "19.0.0-rc-70fb1363-20241010",
+    "react-dom": "19.0.0-rc-70fb1363-20241010",
     "react-markdown": "9.0.1",
     "remark-gfm": "4.0.0",
     "sonner": "1.5.0",
@@ -52,6 +51,7 @@
     "eslint-config-next": "15.0.0-canary.177",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.47",
+    "postcss-load-config": "^6.0.1",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "3.4.13",
