--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@ai-sdk/openai": "0.0.66",
     "@ai-sdk/provider": "0.0.24",
     "@langchain/textsplitters": "0.1.0",
-    "@vercel/blob": "0.25.0",
+    "@vercel/blob": "0.25.1",
     "@vercel/postgres": "0.10.0",
-    "ai": "3.4.9",
+    "ai": "3.4.10",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
     "drizzle-orm": "0.34.1",
     "framer-motion": "12.0.0-alpha.1",
-    "next": "15.0.0-canary.189",
+    "next": "15.0.0-canary.190",
     "next-auth": "5.0.0-beta.22",
     "pdf-parse": "1.1.1",
     "postgres": "3.4.4",
@@ -48,7 +48,7 @@
     "dotenv-cli": "7.4.2",
     "drizzle-kit": "0.25.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.0.0-canary.189",
+    "eslint-config-next": "15.0.0-canary.190",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.47",
     "postcss-load-config": "^6.0.1",
@@ -58,7 +58,7 @@
     "tsx": "4.19.1",
     "typescript": "5.6.3"
   },
-  "packageManager": "pnpm@9.12.0",
+  "packageManager": "pnpm@9.12.1",
   "pnpm": {
     "overrides": {
       "@types/react": "npm:types-react@rc",
@@ -68,5 +68,8 @@
       "ai>@ai-sdk/vue": "-",
       "swr": "2.2.6-beta.4"
     }
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
