--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@langchain/textsplitters": "0.1.0",
     "@vercel/blob": "0.25.1",
     "@vercel/postgres": "0.10.0",
-    "ai": "3.4.12",
+    "ai": "3.4.14",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
     "drizzle-orm": "0.35.1",
     "framer-motion": "12.0.0-alpha.1",
-    "next": "15.0.0-canary.195",
+    "next": "15.0.0-canary.196",
     "next-auth": "5.0.0-beta.22",
     "pdf-parse": "1.1.1",
     "postgres": "3.4.4",
@@ -48,7 +48,7 @@
     "dotenv-cli": "7.4.2",
     "drizzle-kit": "0.26.2",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.0.0-canary.195",
+    "eslint-config-next": "15.0.0-canary.196",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.47",
     "postcss-load-config": "^6.0.1",
@@ -61,8 +61,12 @@
   "packageManager": "pnpm@9.12.1",
   "pnpm": {
     "overrides": {
+      "@types/pg": "8.11.10",
       "@types/react": "npm:types-react@rc",
       "@types/react-dom": "npm:types-react-dom@rc",
+      "@neondatabase/serverless": "0.10.1",
+      "cookie": "0.7.2",
+      "postcss": "8.4.47",
       "ai>@ai-sdk/solid": "-",
       "ai>@ai-sdk/svelte": "-",
       "ai>@ai-sdk/vue": "-",
