--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "@langchain/textsplitters": "0.1.0",
     "@vercel/blob": "0.25.1",
     "@vercel/postgres": "0.10.0",
-    "ai": "3.4.17",
+    "ai": "3.4.18",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
-    "drizzle-orm": "0.35.2",
+    "drizzle-orm": "0.35.3",
     "framer-motion": "12.0.0-alpha.1",
-    "next": "15.0.0-canary.205",
+    "next": "15.0.1-canary.2",
     "next-auth": "5.0.0-beta.25",
     "pdf-parse": "1.1.1",
     "postgres": "3.4.4",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-markdown": "9.0.1",
     "remark-gfm": "4.0.0",
     "sonner": "1.5.0",
@@ -48,7 +48,7 @@
     "dotenv-cli": "7.4.2",
     "drizzle-kit": "0.26.2",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.0.0-canary.205",
+    "eslint-config-next": "15.0.1-canary.2",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.47",
     "postcss-load-config": "^6.0.1",
@@ -67,10 +67,11 @@
       "@neondatabase/serverless": "0.10.1",
       "cookie": "0.7.2",
       "postcss": "8.4.47",
+      "swr": "2.2.6-beta.4",
+      "zod-to-json-schema": "3.23.3",
       "ai>@ai-sdk/solid": "-",
       "ai>@ai-sdk/svelte": "-",
-      "ai>@ai-sdk/vue": "-",
-      "swr": "2.2.6-beta.4"
+      "ai>@ai-sdk/vue": "-"
     }
   },
   "engines": {
