--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@langchain/textsplitters": "0.1.0",
     "@vercel/blob": "0.25.1",
     "@vercel/postgres": "0.10.0",
-    "ai": "3.4.20",
+    "ai": "3.4.23",
     "bcrypt-ts": "5.0.2",
     "classnames": "2.5.1",
     "drizzle-orm": "0.35.3",
     "framer-motion": "12.0.0-alpha.1",
-    "next": "15.0.2-canary.6",
+    "next": "15.0.2-canary.10",
     "next-auth": "5.0.0-beta.25",
     "pdf-parse": "1.1.1",
     "postgres": "3.4.5",
@@ -37,7 +37,7 @@
     "sonner": "1.5.0",
     "swr": "2.2.6-beta.4",
     "usehooks-ts": "3.1.0",
-    "uuid": "11.0.0-0",
+    "uuid": "11.0.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -48,14 +48,14 @@
     "dotenv-cli": "7.4.2",
     "drizzle-kit": "0.26.2",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.0.2-canary.6",
+    "eslint-config-next": "15.0.2-canary.10",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.47",
     "postcss-load-config": "^6.0.1",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "3.4.14",
-    "tsx": "4.19.1",
+    "tsx": "4.19.2",
     "typescript": "5.6.3"
   },
   "packageManager": "pnpm@9.12.1",
