Fix next-auth types

--- a/package.json
+++ b/package.json
@@ -74,6 +74,9 @@
       "ai>@ai-sdk/vue": "-",
       "next>@next/swc-win32-arm64-msvc": "-",
       "next>@next/swc-win32-x64-msvc": "-"
+    },
+    "patchedDependencies": {
+      "next-auth@5.0.0-beta.25": "patches/next-auth@5.0.0-beta.25.patch"
     }
   },
   "engines": {
